# Backend/docs/openapi.yaml
@@ -108,6 +108,11 @@ paths:
     put:
       $ref: "./schemas/purchaseOrder/put-deliver.yaml"
 
+      # ------------Menu----------------
+  /menu:
+    post:
+      $ref: "./schemas/menu/post.yaml"
+
 components:
   securitySchemes:
     cookieAuth:
